lightning-lab-2/busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: my-busybox
  name: my-busybox
  namespace: dev2406
spec:
  nodeName: controlplane
  tolerations:
  - key: "node-role.kubernetes.io/master"
    operator: "Exists"
    effect: "NoSchedule"
  containers:
  - image: busybox
    name: secret
    command: ["sleep", "3600"]
    resources: {}
    volumeMounts:
    - name: secret-volume
      mountPath: /etc/secret-volume
      readOnly: true
 
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
  - name: secret-volume
    secret:
      secretName: dotfile-secret
